# flask-sqlite-demo

./: .gitignore  AGENTS.md  Justfile  Prompt.md  Prompt.zh.md  README.md  index.http  pyproject.toml
app/: main.py
app/domain/: models.py
app/domain/repository/: hero_repo.py
app/domain/repository/tests/: test_hero_repo.py
app/routes/: hero_route.py
db/: demo.sqlite3  schema.ddl
tests/: conftest.py  test_db.py
