[project]
name = "flask-sqlite-demo"
version = "0.1.0"
description = "Flask application demonstrating SQLite integration with SQLAlchemy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sqlacodegen>=3.1.1",
    "ruff>=0.14.2",
    "ty>=0.0.1a24"
]
